[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[project]
name = "pnutmap"
version = "0.2.0"
authors = [
    { name="Peanut", email="pnutvacation@gmail.com" },
]
description = "A simple python wrapper for nmap"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = []

[project.scripts]
pnutmap = "main:main"

[project.urls]
"Homepage" = "https://github.com/realpnut/pnutmap"
"Bug Tracker" = "https://github.com/realpnut/pnutmap/issues"
